# dataset-generator

./: .gitignore  Cargo.toml  README.md  generator.py  generator.rs  profile2.txt
native/: generator.rs  types.rs
native/data_handler/: mod.rs  one_dimension.rs  two_dimension.rs
native/file_generation/: comp.rs  cpu.rs  disk.rs  gpu.rs  mod.rs  ram.rs
native/perfomance/: README.md
native/performance/: README.md
scripted/: analysis.ipynb
