[package]
name = "dataset-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "generator"
path = "native/generator.rs"

[dependencies]
anyhow = "1.0.68"
hdf5 = "0.8.1"
ndarray = "0.15.6"
sysinfo = "0.27.1"

[profile.release]
debug = true